--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </header>
 <main class="Outfit-List">
     <section class="Outfit">
-        <img src="images/1.webp" alt="Outfit 1"> </img>
+        <img src="1.webp" alt="Outfit 1"> </img>
         <h2> Fashion Shirts & Formal pants</h2>
         <p><b>₹1700</b></p>
         <button>Shop Now</button>
