--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <button>Shop Now</button>
     </section>
     <section class="Outfit">
-        <img src="images/2.webp" alt="Outfit 2"> </img>
+        <img src="2.webp" alt="Outfit 2"> </img>
         <h2> Branded cotton Shirts & Normal Jeans</h2>
         <p><b>₹1300 </b></p>
         <button> Shop Now</button>
     </section>
     <section class="Outfit">
         <img
-        src="images/3.webp" alt="Outfit 3"> </img>
+        src="3.webp" alt="Outfit 3"> </img>
         <h2> Luxury Party Wears</h2>
         <p><b>₹1350 </b></p>
 <button> Shop Now </button>
@@ -46,7 +46,7 @@
 
    
     <section class="Outfit">
-        <img src="images/6.webp" alt="Outfit 6"> </img>
+        <img src="6.webp" alt="Outfit 6"> </img>
         <h2>  5 sleeve t shirt
 </h2>
         <p><b>₹1100</b></p>
@@ -54,7 +54,7 @@
     </section>
     <section class="Outfit 7">
         <img
-        src="images/7.webp"alt="Outfit 7"> </img>
+        src="7.webp"alt="Outfit 7"> </img>
         <h2> Branded Shirts </h2>
         <p><b> Offer Price ₹2000 </b></p>
 <button> Shop Now </button>
@@ -62,21 +62,21 @@
    
 <section class="Outfit 8">
         <img
-        src="images/8.webp"alt="Outfit 8"> </img>
+        src="8.webp"alt="Outfit 8"> </img>
         <h2> Long Sleeve Cotton T-shirts </h2>
         <p><b> ₹700 </b></p>
 <button> Shop Now </button>
 </section>
 <section class="Outfit 9">
         <img
-        src="images/9.webp"alt="Outfit "> </img>
+        src="9.webp"alt="Outfit "> </img>
         <h2> Branded Premium Shirts</h2>
         <p><b> ₹1000 </b></p>
 <button> Shop Now </button>
 </section>
 <section class="Outfit 10">
         <img
-        src="images/10.webp"alt="Outfit "> </img>
+        src="10.webp"alt="Outfit "> </img>
         <h2> Cotton Premium Shirts</h2>
         <p><b> ₹999 </b></p>
 <button> Shop Now </button>
