Update enquiry .html

--- a/enquiry .html
+++ b/enquiry .html
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-    <img src="images/11.webp" alt="picture">
+    <img src="11.webp" alt="picture">
     
 
 <div class="enquiry-form">
