Update enquiry .html

--- a/enquiry .html
+++ b/enquiry .html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      img src: ;
+      background-image:"11.webp";
       
     }
     .enquiry-form {
