Update enquiry .html

--- a/enquiry .html
+++ b/enquiry .html
@@ -5,7 +5,13 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image:"11.webp";
+      background-image:
+        url("11.webp");
+      background-size:cover;
+      background-repeat:no-repeat;
+      height:100vh;
+      margin:0;
+    }
       
     }
     .enquiry-form {
