Update enquiry .html

--- a/enquiry .html
+++ b/enquiry .html
@@ -15,7 +15,7 @@
       
     }
     .enquiry-form {
-      max-width: 200px;
+      max-width: 250px;
       margin: 40px auto;
       padding: 20px;
       border: 2px solid #333;
@@ -41,6 +41,9 @@
     }
     .enquiry-form button:hover {
       background-color: #0b78d1;
+    }
+    h2{
+      text-align:center;
     }
   </style>
 </head>
