Update enquiry .html

--- a/enquiry .html
+++ b/enquiry .html
@@ -3,17 +3,15 @@
 <head>
   <title>Enquiry Form</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-image:
-        url("11.webp");
-      background-size:cover;
-      background-repeat:no-repeat;
-      height:100vh;
-      margin:0;
-    }
-      
-    }
+        body {
+            font-family: Arial, sans-serif;
+            background-image: url('11.webp.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 100vh;
+            margin: 0;
+        }
+
     .enquiry-form {
       max-width: 250px;
       margin: 40px auto;
@@ -23,7 +21,7 @@
     }
     .enquiry-form input,
     .enquiry-form textarea {
-      width: 80%;
+      width: 95%;
       padding: 10px;
       margin-top: 10px;
       margin-bottom: 15px;
@@ -43,7 +41,7 @@
       background-color: #0b78d1;
     }
     h2{
-      text-align:center;
+      text-align: center;
     }
   </style>
 </head>
